# miniprokkis

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  exampl.json  example.json  interactive_console_output.xml  log.html  output.xml  pyproject.toml  refences.bib  report.html  retro.md  savedreferences.json  source_types.json  tasks.py
.github/workflows/: main.yml
Project retros/: Sprint2_retro.md  Sprint3_retro.md
documentation/: coveragereport.md
src/: AppLibrary.py  console_io.py  converter.py  index.py  reference.py  reference_types.py  referencehandler.py  servicehandler.py
src/assets/: reference.py  reference_types.py  source_types.json
src/services/: add.py  console_io.py  converter.py  delete.py  filter.py  key.py  keyhandler.py  print.py  recommend.py
src/services/print/: print.py  printservice.py
src/tests/: addservice_test.py  converter_test.py  deleteservice_test.py  latest_features.robot  print_reference.robot  printter_test.py  reference_adder.robot  referencehandler.robot  referencehandler_test.py  resource.robot  service_test.py  servicehandler_test.py  services_tests.robot
src/tests/robot/: latest_features.robot  print_reference.robot  reference_adder.robot  resource.robot
