[tool.poetry]
name = "miniprojekti"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
autopep8 = "^2.0.4"
coverage = "^7.3.2"
invoke = "^2.2.0"
pylint = "^3.0.2"
robotframework = "^6.1.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
